Fix: polish KYC inputs

--- a/src/custom/styles/containers/ProfileAddress.pcss
+++ b/src/custom/styles/containers/ProfileAddress.pcss
@@ -89,9 +89,13 @@
         }
 
         legend {
-          background-color: var(--base-bright);
+          background-color: var(--body-background-color);
+          font-size: 13px;
+          left: 10px;
+          padding: 0 5px;
           position: absolute;
           top: calc(var(--gap) * -1.6);
+          width: auto;
         }
 
         input {
