--- a/src/custom/styles/containers/Questionnaire.pcss
+++ b/src/custom/styles/containers/Questionnaire.pcss
@@ -144,7 +144,8 @@
 
         legend {
           background-color: var(--body-background-color);
-          margin-top: -11px;
+          font-size: 12px;
+          margin-top: -10px;
           padding: 0 5px;
           position: absolute;
           width: auto;
