--- a/src/components/Dropdown/Dropdown.pcss
+++ b/src/components/Dropdown/Dropdown.pcss
@@ -6,7 +6,7 @@
   .show > .btn-primary.dropdown-toggle {
     border: 1px solid var(--input-border-color-active) !important;
     box-shadow: none !important;
-    color: var(--dropdown-text-color-active) !important;
+    color: var(--table-text-color) !important;
   }
 
   .dropdown {
@@ -26,7 +26,7 @@
       &:active {
         border: 1px solid var(--input-border-color-active) !important;
         box-shadow: none !important;
-        color: var(--dropdown-text-color-active) !important;
+        color: var(--table-text-color) !important;
       }
 
       &::after {
@@ -43,7 +43,7 @@
     }
 
     &-item {
-      color: var(--dropdown-text-color);
+      color: var(--table-text-color);
       padding-bottom: 10px;
       padding-top: 10px;
       transition: 0.2s;
